--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.10",
     "framer-motion": "^12.23.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
     "react-scroll-parallax": "^3.4.5",
     "swiper": "^11.2.8",
