--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.10",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
@@ -24,6 +25,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
     "react-scroll-parallax": "^3.4.5",
+    "recharts": "^3.5.1",
     "swiper": "^11.2.8",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.10"
