--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.4",
     "leaflet": "^1.9.4",
